# crypto-pump-detector

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  MOBILE-REFRESH.md  PLAN.md  README.md  analisis-criptos-2026-05-12.md  app.py  pyproject.toml  render.yaml  requirements.txt  run.sh
.github/workflows/: api-test.yml  pages.yml
config/: settings.yaml  watchlist.yaml
data/: alerts.csv  event_history.csv  latest_scan.csv
data/charts/: BINANCE_BCHUSD_P_1d.json  (+79 more)
docs/: README.md  index.html  report.html
plans/: 2026-06-12-alerta-pump-y-zoom-movil.md  2026-06-14-dashboard-accum-viz.md  2026-06-14-whale-edge-research.md
report/: index.html  okx_basis_1d.json  okx_basis_4h.json  okx_oi_1d.json
scripts/: branch-refresh.sh  build_coinalyze_html.py  build_html.py  build_report.py  coinalyze_refresh.py  refresh.sh  scan.py  termux-refresh.sh  termux-setup.sh  validate_coinalyze_html.py  validate_static_html.py
tests/: test_accumulation.py  test_aggregated_funding.py  test_app_liquidation_overlay.py  test_basis.py  test_build_coinalyze_html.py  test_build_html.py  test_build_html_liquidations.py  test_coinalyze_dashboard.py  test_config.py  test_data_clients.py  test_liquidations.py  test_liquidations_coinalyze.py  test_liquidations_coinalyze_windows.py  test_liquidations_coinglass_frontend.py  test_liquidations_store.py  test_liquidations_ws.py  test_positioning.py  test_refresh_scripts.py  test_scan_events.py  test_scan_liquidations.py  test_scanner.py  test_signals.py  test_squeeze.py  test_symbols.py  test_validate_coinalyze_html.py  test_validate_static_html.py
(+169 files in other folders)
