[project]
name = "crypto-pump-detector"
version = "0.1.0"
description = "MVP scanner for leveraged crypto perpetual pump/blow-off setups."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "PyYAML>=6.0",
    "streamlit>=1.34",
    "plotly>=5.20",
    "websockets>=12",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
